src/assets/scss/partials/_home.scss: Fix no-wrap property

--- a/src/assets/scss/partials/_home.scss
+++ b/src/assets/scss/partials/_home.scss
@@ -34,7 +34,6 @@
   font-weight: 200;
   padding-bottom: 10px;
 
-  display: inline-block;
   white-space: nowrap;
 }
 
